--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.4.3",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "redis": "^4.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
